# computacao-grafica

./: CMakeLists.txt
src/: main.cpp
src/model/: Face.hpp  Group.hpp  Mesh.hpp
src/reader/: ObjectReader.cpp  ObjectReader.h
